CHANGES IN FLTK 1.1.4

	- Updated the default background color on OSX to provide
	  better contrast.
	- Fl_Text_Display and friends now look for the next
	  non-punctuation/space character for word boundaries
	  (STR #26)
	- gl_font() didn't work properly for X11 when Xft was
	  used (STR #12)
	- Fl_File_Browser incorrectly included "." on WIN32 (STR
	  #9)
	- Include shellapi.h instead of ShellAPI.h in the WIN32
	  drag-n-drop code in order to work with the MingW cross
	  compiler (STR #6)
	- The cursor was not properly restored when doing
	  drag-n-drop on X11 (STR #4)
	- Fl::remove_fd() didn't recalculate the highest file
	  descriptor properly (STR #20)
	- Fl_Preferences::deleteGroup() didn't work properly
	  (STR #13)
	- Fixed the fl_show_file_selector() function - it was
	  copying using the wrong string size (STR #14)
	- fl_font() and fl_size() were not implemented on MacOS
	  X.
	- Sorted the icon menu bar in fluid.
	- Fixed minor memory access complaints from Valgrind
	- Compiling src/flstring.h on OS X with BSD header would
	  fail.
	- Fl_Text_Editor didn't scroll the buffer when the user
	  pressed Ctrl+End or Ctrl+Home.
	- Fl_Text_Editor didn't show its cursor when the mouse
	  was moved inside the window.
	- FLUID now uses an Fl_Text_Display widget for command
	  output, which allows you to copy and paste text from
	  command output into other windows.
	- Fl_Gl_Window could cause a bus error on MacOS X if the
	  parent window was not yet shown.
	- FLUID could crash after displaying a syntax error
	  dialog for the callback code.
	- FLUID would reset the callback code if you opened the
	  widget panel for multiple widgets.
	- Added a NULL check to Fl_Text_Display (SF Bug #706921).
	- The fltk-config script placed the LDFLAGS at the wrong
	  place in the linker options.
	- Fl_Text_Display didn't draw the outer box in the right
	  dimensions, so it was invisible.
	- Fl_Help_Dialog used the same color for links as for